[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turboquant-mlx"
version = "0.1.0"
description = "TurboQuant weight quantization for MLX language models"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.22",
    "numpy>=1.26",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "scipy>=1.12",
]

[project.scripts]
turboquant-mlx = "turboquant_mlx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["turboquant_mlx"]
